  - Rewrite the DMA functions for better accuracy
  - Add support for IPF/CTR files by using the capsimage library
  - Add open source support for Pasti STX files, including random/fuzzy bits
    and variable length bits
  - Don't force drives A and B at $4c2, keep the values detected by TOS
  - Many other timing / status register improvements
- GEMDOS HD emulation:
  - Fix: clip filenames given through GEMDOS calls to 8+3
    lenght using first '.'
- ACSI hard disk changes:
  - Fixed/improved READ CAPACITY and INQUIRY commands
  - Unsupported commands are now handled correctly
  - Now using fseeko() instead of fseek() for supporting large images
- Other changes:
  - Don't enable MegaST's real time clock by default, it can cause some
    crashes in STF/STE mode
  - Improve ACIA's wait state with E clock
  - Add support for IKBD commands 0x11 and 0x13 (resume/pause output)
    and 0x17 (joystick monitoring)

Emulator:
- SDL GUI:
  - Update clock speed in the status bar when changing bus speed
    in Falcon mode
  - In the floppy dialog, use a checkbox to enable/disable drives A and B
    and another checkbox to choose single/double sided drive
  - In the screen dialog, add checkbox for --desktop-st option
  - Add a 2nd line in the status bar, with infos on FDC, joysticks, monitor
  - Fix OSX performance issue caused by statusbar and overlay LED
    doing their own SDL_UpdateRects() calls
- New command line options:
  - Options --drive-a and --drive-b to enable/disable drives A and B
  - Options --drive-a-heads and --drive-b-heads to select single or
    double sided drives A and B
  - --slowdown option to increase (multiply) VBL wait times
- New Native Features commands:
  - NF_EXIT exits emulator with given exit code
  - NF_DEBUGGER invokes Hatari debugger from native program
  - NF_FASTFORWARD sets fast forward on/off
- Tracing improvements:
  - Add option for tracing NatFeats calls
  - Fix: Xbios(255) modified the given argument string